--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,18 +63,24 @@
         <item>vege_soba</item>
     </string-array>
 
-    <string-array name = "noodle_extras_names">
+    <string-array name="noodle_extras_names">
         <item>Noodle Type</item>
         <item>Temperature</item>
         <item>With Oomori</item>
         <item>With Extra Dipping Sauce</item>
     </string-array>
 
-    <string-array name = "string_value_array">
+    <string-array name="string_value_array">
         <item>Soba</item>
         <item>Hot</item>
         <item></item>
         <item></item>
     </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="my_card_fragment">My Card fragment</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
